<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>rtspmedia</groupId>
    <artifactId>rtsp</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
    </properties>
        <!-- Define dependencies -->
        <dependencies>

            <dependency>
              <groupId>com.example</groupId> <!-- Update this with the actual groupId of merrimackutil.jar -->
              <artifactId>merrimackutil</artifactId> <!-- Update this with the actual artifactId of merrimackutil.jar -->
              <version>1.0</version> <!-- Update this with the actual version of merrimackutil.jar -->
              <scope>system</scope>
              <systemPath>${project.basedir}/lib/merrimackutil.jar</systemPath>
            </dependency>
          </dependencies>

</project>